After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 683936 - ClickAction doesn't support touch events
ClickAction doesn't support touch events
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: ClutterAction
unspecified
Other All
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2012-09-13 09:59 UTC by Emanuele Aina
Modified: 2012-09-13 11:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
click-action: add touch event support (3.29 KB, patch)
2012-09-13 09:59 UTC, Emanuele Aina
accepted-commit_now Details | Review
click-action: add touch event support (3.29 KB, patch)
2012-09-13 11:18 UTC, Emanuele Aina
committed Details | Review

Description Emanuele Aina 2012-09-13 09:59:07 UTC
ClickAction is unable to detect tap gestures done with touch devices, as it
doesn't handle TOUCH_BEGIN/TOUCH_END events.

The attached patch add that support with no API changes, but an
implementation subclassing GestureAction may be more interesting.
Comment 1 Emanuele Aina 2012-09-13 09:59:10 UTC
Created attachment 224205 [details] [review]
click-action: add touch event support

Allow for touch events to trigger the "clicked" event on
ClickAction without introducing API changes.
Comment 2 Emmanuele Bassi (:ebassi) 2012-09-13 10:44:40 UTC
Review of attachment 224205 [details] [review]:

looks good to me
Comment 3 Emanuele Aina 2012-09-13 11:18:24 UTC
The following fix has been pushed:
e6fcdb0 click-action: add touch event support
Comment 4 Emanuele Aina 2012-09-13 11:18:28 UTC
Created attachment 224212 [details] [review]
click-action: add touch event support

Allow for touch events to trigger the "clicked" event on
ClickAction without introducing API changes.